--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -26,22 +26,13 @@ ENV MAMBA_USER=$NB_USER
 RUN apt-get update && \
     apt-get install -y --no-install-recommends sudo gettext-base wget curl unzip git rsync && \
     # We just install tzdata below but leave default time zone as UTC. This helps packages like Pandas to function correctly.
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata awscli && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends awscli tzdata && \
     chmod g+w /etc/passwd && \
     echo "ALL    ALL=(ALL)    NOPASSWD:    ALL" >> /etc/sudoers && \
     # Note that we do NOT run `rm -rf /var/lib/apt/lists/*` here. If we did, anyone building on top of our images will
     # not be able to run any `apt-get install` commands and that would hamper customizability of the images.
     :
 RUN echo "source /usr/local/bin/_activate_current_env.sh" | tee --append /etc/profile
-
-# Install glue kernels, and move to shared directory
-RUN install-glue-kernels && \
-    mv /root/.local/share/jupyter/kernels/glue_pyspark /opt/conda/share/jupyter/kernels && \
-    mv /root/.local/share/jupyter/kernels/glue_spark /opt/conda/share/jupyter/kernels
-
-# Patch glue kernels to use kernel wrapper
-COPY patch_glue_pyspark.json /opt/conda/share/jupyter/kernels/glue_pyspark/kernel.json
-COPY patch_glue_spark.json /opt/conda/share/jupyter/kernels/glue_spark/kernel.json
 
 USER $MAMBA_USER
 COPY --chown=$MAMBA_USER:$MAMBA_USER $ENV_IN_FILENAME *.in /tmp/
@@ -60,6 +51,17 @@ RUN micromamba install -y --name base --file /tmp/$ENV_IN_FILENAME && \
 
 ARG MAMBA_DOCKERFILE_ACTIVATE=1
 RUN sudo ln -s $(which python3) /usr/bin/python
+
+# Install glue kernels, and move to shared directory
+RUN install-glue-kernels && \
+    jupyter-kernelspec install /opt/conda/lib/python3.10/site-packages/aws_glue_interactive_sessions_kernel/glue_pyspark --user && \
+    jupyter-kernelspec install /opt/conda/lib/python3.10/site-packages/aws_glue_interactive_sessions_kernel/glue_spark --user && \
+    mv /home/sagemaker-user/.local/share/jupyter/kernels/glue_pyspark /opt/conda/share/jupyter/kernels && \
+    mv /home/sagemaker-user/.local/share/jupyter/kernels/glue_spark /opt/conda/share/jupyter/kernels
+
+# Patch glue kernels to use kernel wrapper
+COPY patch_glue_pyspark.json /opt/conda/share/jupyter/kernels/glue_pyspark/kernel.json
+COPY patch_glue_spark.json /opt/conda/share/jupyter/kernels/glue_spark/kernel.json
 
 USER root
 RUN HOME_DIR="/home/${NB_USER}/licenses" \
