Dynamic site packages

--- a/build_artifacts/v1/v1.0/v1.0.0/v1.0.0-beta/Dockerfile
+++ b/build_artifacts/v1/v1.0/v1.0.0/v1.0.0-beta/Dockerfile
@@ -54,8 +54,9 @@ RUN sudo ln -s $(which python3) /usr/bin/python
 
 # Install glue kernels, and move to shared directory
 RUN install-glue-kernels && \
-    jupyter-kernelspec install /opt/conda/lib/python3.10/site-packages/aws_glue_interactive_sessions_kernel/glue_pyspark --user && \
-    jupyter-kernelspec install /opt/conda/lib/python3.10/site-packages/aws_glue_interactive_sessions_kernel/glue_spark --user && \
+    SITE_PACKAGES=$(pip show aws-glue-sessions | grep Location | awk '{print $2}')
+    jupyter-kernelspec install $SITE_PACKAGES/aws_glue_interactive_sessions_kernel/glue_pyspark --user && \
+    jupyter-kernelspec install $SITE_PACKAGES/aws_glue_interactive_sessions_kernel/glue_spark --user && \
     mv /home/sagemaker-user/.local/share/jupyter/kernels/glue_pyspark /opt/conda/share/jupyter/kernels && \
     mv /home/sagemaker-user/.local/share/jupyter/kernels/glue_spark /opt/conda/share/jupyter/kernels
 
